overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,4 @@
   color: #000;
   font-family: 'Poppins', sans-serif;
   width: 100vw;
-  overflow-x: hidden;
 }
