--- a/src/components/Header/Style.scss
+++ b/src/components/Header/Style.scss
@@ -10,7 +10,6 @@
     height: 70px;
     background-color: transparent;
     padding: 20px 0;
-    z-index: 1;
     .burger-element{
         display: none;
     }
